--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,200&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/scss/index.css">
-    <title>About </title>
+    <title>Contact</title>
 </head>
 <body>
     <header>
@@ -41,121 +41,68 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-content">
-                        <h2>About Us</h2>
+                        <h2>Contact</h2>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="about-us">
+        <section class="map">
             <div class="container">
                 <div class="row">
-                    <div class="about-image">
-                        <img src="./assets/images/about.png.webp" alt="">
-                    </div>
-                    <div class="about-content">
-                        <span>About Us</span>
-                        <h2>Get ready for real time adventure</h2>
-                        <p>Lets start your journey with us, your dream will come  true. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation.</p>
-                        <a href="" class="about-button">Book Your Destinations</a>
-                    </div>
+                    <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=480&amp;hl=en&amp;q=Buttonwood,%20California.%20Rosemead,%20CA%2091770+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                        <a href="https://www.maps.ie/distance-area-calculator.html">measure distance on map</a>
+                    </iframe>
                 </div>
             </div>
         </section>
-        <section class="testimonial">
+        <section class="contact-form">
             <div class="container">
                 <div class="row">
-                    <div class="testimonial-content">
-                        <h2>What customers say</h2>
-                        <p>"Let's start your journey with us, your dream will come true. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <div class="testi-bottom">
-                            <div class="testi-bottom-left">
-                                <img src="./assets/images/founder-img.png.webp" alt="">
+                    <h2>Get In Touch</h2>
+                    <div class="contact">
+                        <div class="contact-right">
+                            <form action="">
+                                <textarea name="" id="" cols="30" rows="10" placeholder="Enter Message" required></textarea>
+                                <div class="mail">
+                                    <input type="text" name="" id="" placeholder="Enter your name" required>
+                                    <input type="email" name="" id="" placeholder="Email" required>
+                                </div>
+                                <input type="text" name="subject" id="" placeholder="Enter Subject" required>
+                                <button type="submit">SEND</button>
+                            </form>
+                        </div>
+                        <div class="contact-left">
+                            <div class="contact-info">
+                                <div class="contact-image">
+                                    <img src="./assets/images/Capture1.PNG" alt="home">
+                                </div>
+                                <div class="contact-content">
+                                    <a href="https://goo.gl/maps/GBJ6rcFNuhVUQWNG7" target="_blank">Buttonwood, California.
+                                        <p>Rosemead, CA 91770</p>
+                                    </a>
+                                </div>
                             </div>
-                            <div class="testi-bottom-left">
-                                <p>Mark Anthony</p>
-                                <p>CEO of Colorlib</p>
+                            <div class="contact-info">
+                                <div class="contact-image">
+                                    <img src="./assets/images/Capture2.PNG" alt="tablet">
+                                </div>
+                                <div class="contact-content">
+                                    <a href="tel:+1 253 565 2365" target="_blank">+1 253 565 2365
+                                        <p>Mon to Fri 9am to 6pm</p>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="contact-info">
+                                <div class="contact-image">
+                                    <img src="./assets/images/Capture3.PNG" alt="email">
+                                </div>
+                                <div class="contact-content">
+                                    <a href="mailto:support@colorlib.com" target="_blank">support@colorlib.com
+                                        <p>Send us your query anytime!</p>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="faq">
-            <div class="container">
-                <div class="row">
-                    <div class="faq-header">
-                        <span>FAQ</span>
-                        <h2>Full range of travel service</h2>
-                    </div>
-                    <div class="faq-content">
-                        <div class="faq-content-left">
-                            <details class="faq__detail">
-                                <summary  class="faq__summary">Starts the automated process.</summary>
-                                <p class="faq__text">The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare</p>
-                            </details>
-                            <details class="faq__detail">
-                                <summary  class="faq__summary">The automated process starts.</summary>
-                                <p class="faq__text">The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare</p>
-                            </details>
-                            <details class="faq__detail">
-                                <summary  class="faq__summary">Automated process starts.</summary>
-                                <p class="faq__text">The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare</p>
-                            </details>
-                            <details class="faq__detail">
-                                <summary  class="faq__summary">Process the automated magic.</summary>
-                                <p class="faq__text">The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare</p>
-                            </details>
-                        </div>
-                        <div class="faq-content-right">
-                            <img src="./assets/images/about2.png.webp" alt="">
-                        </div>
-                    </div>
-                    <div class="faq-bottom">
-                        <a href="" class="faq-button">Book Your Destinations</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="instagram">
-            <div class="row">
-                <div class="col-items">
-                    <img src="./assets/images/instra1.jpg.webp" alt="">
-                    <div class="insta-hover">
-                        <a href="#">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-items">
-                    <img src="./assets/images/instra2.jpg.webp" alt="">
-                    <div class="insta-hover">
-                        <a href="#">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-items">
-                    <img src="./assets/images/instra3.jpg.webp" alt="">
-                    <div class="insta-hover">
-                        <a href="#">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-items">
-                    <img src="./assets/images/instra4.jpg.webp" alt="">
-                    <div class="insta-hover">
-                        <a href="#">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-items">
-                    <img src="./assets/images/instra5.jpg.webp" alt="">
-                    <div class="insta-hover">
-                        <a href="#">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
                     </div>
                 </div>
             </div>
