--- a/events.html
+++ b/events.html
@@ -3,42 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,200&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/scss/index.css">
-    <title>About </title>
+    <title>Events </title>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="./assets/images/logo.png.webp" alt="">
+                    <img src="./assets/images/logo.png.webp" alt="Logo of Tralive">
                 </a>
             </div>
-            <div class="menu">
-                <ul class="main-menu">
-                    <li class="menu-item"><a href="index.html">Home</a></li>
-                    <li class="menu-item"><a href="events.html">Events</a></li>
-                    <li class="menu-item"><a href="about.html">About</a></li>
-                    <li class=" dropdown">
-                        <a href="blog.html">Blog</a>
-                        <ul class="dropdown-items">
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Events Details</a></li>
-                            <li><a href="#">Blogs Details</a></li>
-                            <li><a href="#">Element</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
-                </ul>
-                <a href="#" class="phone"><i class="fa-solid fa-phone"></i> +10 (67) 678 2567</a>
-            </div>
+            <ul class="main-menu">
+                <li class="menu-item"><a href="index.html">Home</a></li>
+                <li class="menu-item"><a href="events.html">Events</a></li>
+                <li class="menu-item"><a href="about.html">About</a></li>
+                <li class=" dropdown">
+                    <a href="blog.html">Blog</a>
+                    <ul class="dropdown-items" >
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Events Details</a></li>
+                        <li><a href="#">Blogs Details</a></li>
+                        <li><a href="#">Element</a></li>
+                    </ul>
+                </li>
+                <li class="menu-item"><a href="contact.html">Contact</a></li>
+                <li class="menu-item"><a href="tel:+10 (67) 678 2567" target="_blank" class="phone"><i class="fa-solid fa-phone"></i> +10 (67) 678 2567</a></li>
+            </ul>
         </nav>
     </header>
     <main>
-        <section class="about-hero">
+        <section class="event-heros">
             <div class="container">
                 <div class="row">
                     <div class="hero-content">
@@ -55,123 +54,120 @@
                         <h2>Upcoming Events</h2>
                     </div>
                     <div class="slider-cards">
-                        <div class="card-top">
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="./assets/images/services1.jpg.webp" alt="">
-                                </div>
-                                <div class="card-info">
-                                    <div class="card-info-top">
-                                        <h3>
-                                            <a href="#">Mega Turkey</a>
-                                        </h3>
-                                        <span>$1200</span>
-                                    </div>
-                                    <p>
-                                        <a href="#">12 Jan- 18 Jan</a>
-                                        <span>5 Days</span>
-                                    </p>
-                                </div>
+                        <div class="card">
+                            <div class="card-image ">
+                                <img src="./assets/images/services1.jpg.webp" alt="">
                             </div>
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="./assets/images/services1.jpg.webp" alt="">
+                            <div class="card-info">
+                                <div class="card-info-top">
+                                    <h3>
+                                        <a href="#">Mega Turkey</a>
+                                    </h3>
+                                    <span>$1200</span>
                                 </div>
-                                <div class="card-info">
-                                    <div class="card-info-top">
-                                        <h3>
-                                            <a href="#">Mega Turkey</a>
-                                        </h3>
-                                        <span>$1200</span>
-                                    </div>
-                                    <p>
-                                        <a href="#">12 Jan- 18 Jan</a>
-                                        <span>5 Days</span>
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="./assets/images/services1.jpg.webp" alt="">
-                                </div>
-                                <div class="card-info">
-                                    <div class="card-info-top">
-                                        <h3>
-                                            <a href="#">Mega Turkey</a>
-                                        </h3>
-                                        <span>$1200</span>
-                                    </div>
-                                    <p>
-                                        <a href="#">12 Jan- 18 Jan</a>
-                                        <span>5 Days</span>
-                                    </p>
-                                </div>
+                                <p>
+                                    <a href="#">12 Jan- 18 Jan</a>
+                                    <span>5 Days</span>
+                                </p>
                             </div>
                         </div>
-                        <div class="card-bottom">
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="./assets/images/services1.jpg.webp" alt="">
-                                </div>
-                                <div class="card-info">
-                                    <div class="card-info-top">
-                                        <h3>
-                                            <a href="#">Mega Turkey</a>
-                                        </h3>
-                                        <span>$1200</span>
-                                    </div>
-                                    <p>
-                                        <a href="#">12 Jan- 18 Jan</a>
-                                        <span>5 Days</span>
-                                    </p>
-                                </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/images/services2.jpg.webp" alt="">
                             </div>
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="./assets/images/services1.jpg.webp" alt="">
+                            <div class="card-info">
+                                <div class="card-info-top">
+                                    <h3>
+                                        <a href="#">Filande</a>
+                                    </h3>
+                                    <span>$1200</span>
                                 </div>
-                                <div class="card-info">
-                                    <div class="card-info-top">
-                                        <h3>
-                                            <a href="#">Mega Turkey</a>
-                                        </h3>
-                                        <span>$1200</span>
-                                    </div>
-                                    <p>
-                                        <a href="#">12 Jan- 18 Jan</a>
-                                        <span>5 Days</span>
-                                    </p>
-                                </div>
+                                <p>
+                                    <a href="#">12 Jan- 18 Jan</a>
+                                    <span>5 Days</span>
+                                </p>
                             </div>
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="./assets/images/services1.jpg.webp" alt="">
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/images/services3.jpg.webp" alt="">
+                            </div>
+                            <div class="card-info">
+                                <div class="card-info-top">
+                                    <h3>
+                                        <a href="#">Spitzberg</a>
+                                    </h3>
+                                    <span>$1200</span>
                                 </div>
-                                <div class="card-info">
-                                    <div class="card-info-top">
-                                        <h3>
-                                            <a href="#">Mega Turkey</a>
-                                        </h3>
-                                        <span>$1200</span>
-                                    </div>
-                                    <p>
-                                        <a href="#">12 Jan- 18 Jan</a>
-                                        <span>5 Days</span>
-                                    </p>
+                                <p>
+                                    <a href="#">12 Jan- 18 Jan</a>
+                                    <span>5 Days</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-cards">
+                        <div class="card">
+                            <div class="card-image ">
+                                <img src="./assets/images/services4.jpg.webp" alt="">
+                            </div>
+                            <div class="card-info">
+                                <div class="card-info-top">
+                                    <h3>
+                                        <a href="#">Mega Turkey</a>
+                                    </h3>
+                                    <span>$1200</span>
                                 </div>
+                                <p>
+                                    <a href="#">12 Jan- 18 Jan</a>
+                                    <span>5 Days</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/images/services5.jpg.webp" alt="">
+                            </div>
+                            <div class="card-info">
+                                <div class="card-info-top">
+                                    <h3>
+                                        <a href="#">Filande</a>
+                                    </h3>
+                                    <span>$1200</span>
+                                </div>
+                                <p>
+                                    <a href="#">12 Jan- 18 Jan</a>
+                                    <span>5 Days</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/images/services6.jpg.webp" alt="">
+                            </div>
+                            <div class="card-info">
+                                <div class="card-info-top">
+                                    <h3>
+                                        <a href="#">Spitzberg</a>
+                                    </h3>
+                                    <span>$1200</span>
+                                </div>
+                                <p>
+                                    <a href="#">12 Jan- 18 Jan</a>
+                                    <span>5 Days</span>
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        
         <section class="video">
             <div class="container">
                 <div class="row">
                     <div class="video-play">
                         <div class="play-image">
-                            <a href="#"><img src="./assets/images/play-butto.svg" alt=""></a>
+                            <a href="https://www.youtube.com/watch?v=GHEiHCO5tJs" target="_blank"><img src="./assets/images/play-butto.svg" alt=""></a>
                         </div>
                         <h3>Watch our last tour</h3>
                     </div>
@@ -229,39 +225,39 @@
                 <div class="footer-top">
                     <div class="footer-part">
                         <a href="index.html"><img src="./assets/images/logo2_footer.png.webp" alt=""></a>
-                        <p>Land behold it created good saw after<br> she'd Our set living. Signs midst<br> dominion creepeth morning laboris nisi<br> ufsit aliquip.</p>
+                        <p>Land behold it created good saw after she'd Our set living. Signs midst dominion creepeth morning laboris nisi ufsit aliquip.</p>
                         <div class="social-medias">
-                            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-                            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                            <a href=""><i class="fa-brands fa-square-pinterest"></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                            <a href="https://az.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://www.pinterest.com/" target="_blank"><i class="fa-brands fa-square-pinterest"></i></a>
                         </div>
                     </div>
                     <div class="footer-part">
                         <h4>Navigation</h4>
                         <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Blog</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-part">
                         <h4>Services</h4>
                         <ul>
-                            <li><a href="">Blackforest</a></li>
-                            <li><a href="">Bodhubon</a></li>
-                            <li><a href="">Rongdhonu</a></li>
-                            <li><a href="">Meghrong</a></li>
+                            <li><a href="#">Blackforest</a></li>
+                            <li><a href="#">Bodhubon</a></li>
+                            <li><a href="#">Rongdhonu</a></li>
+                            <li><a href="#">Meghrong</a></li>
                         </ul>
                     </div>
                     <div class="footer-part">
                         <h4>Contact Us</h4>
                         <ul>
-                            <li><a href="">76/A, Green Lane,<br> Dhanmondi, NYC</a></li>
-                            <li><a href="mailto:demomail89@gmail.com">demomail89@gmail.com</a></li>
-                            <li><a href="" class="mobile-phone">+10 (78) 738-9083</a></li>
+                            <li><a href="https://www.google.com/maps/search/76%2FA,+Green+Lane,+Dhanmondi,+NYC/@24.259034,-36.529768,3z/data=!3m1!4b1?entry=ttu" target="_blank">76/A, Green Lane, Dhanmondi, NYC</a></li>
+                            <li><a href="mailto:demomail89@gmail.com" target="_blank">demomail89@gmail.com</a></li>
+                            <li><a href="tel:+10 (78) 738-9083" target="_blank" class="mobile-phone">+10 (78) 738-9083</a></li>
                         </ul>
                     </div>
                 </div>
@@ -280,6 +276,11 @@
             </a>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="https://kit.fontawesome.com/7b89daf135.js" crossorigin="anonymous"></script>
 </body>
 </html>
