--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                         <span>About Us</span>
                         <h2>Get ready for real time adventure</h2>
                         <p>Lets start your journey with us, your dream will come  true. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation.</p>
-                        <a href="" class="about-button">Book Your Destinations</a>
+                        <a href="#" class="about-button">Book Your Destinations</a>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="faq-bottom">
-                        <a href="" class="faq-button">Book Your Destinations</a>
+                        <a href="#" class="faq-button">Book Your Destinations</a>
                     </div>
                 </div>
             </div>
