--- a/events.html
+++ b/events.html
@@ -35,6 +35,24 @@
                 <li class="menu-item"><a href="tel:+10 (67) 678 2567" target="_blank" class="phone"><i class="fa-solid fa-phone"></i> +10 (67) 678 2567</a></li>
             </ul>
         </nav>
+        <div class="top-nav">
+            <div>
+                <a href="index.html">
+                    <img src="./assets/images/logo.png.webp" alt="Logo of Tralive">
+                </a>
+            </div>
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'></div>
+            </label>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
     </header>
     <main>
         <section class="event-heros">
