--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
                 <li class="menu-item"><a href="tel:+10 (67) 678 2567" target="_blank" class="phone"><i class="fa-solid fa-phone"></i> +10 (67) 678 2567</a></li>
             </ul>
         </nav>
+        <div class="top-nav">
+            <div>
+                <a href="index.html">
+                    <img src="./assets/images/logo.png.webp" alt="Logo of Tralive">
+                </a>
+            </div>
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'></div>
+            </label>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
     </header>
     <main>
         <section class="hero" data-aos="fade-up" data-aos-anchor-placement="top-bottom" >
@@ -130,7 +148,7 @@
                         <span>About Us</span>
                         <h2>Get ready for real time adventure</h2>
                         <p>Lets start your journey with us, your dream will come  true. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation.</p>
-                        <a href="" class="about-button">Book Your Destinations</a>
+                        <a href="#" class="about-button">Book Your Destinations</a>
                     </div>
                 </div>
             </div>
@@ -202,7 +220,7 @@
                 </div>
             </div>
         </section>
-        <section class="instagram">
+        <section class="instagram" >
             <div class="row">
                 <div class="col-items">
                     <img src="./assets/images/instra1.jpg.webp" alt="">
