--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     <div class="faq-bottom">
-                        <a href="" class="faq-button">Book Your Destinations</a>
+                        <a href="#" class="faq-button">Book Your Destinations</a>
                     </div>
                 </div>
             </div>
