--- a/contact.html
+++ b/contact.html
@@ -79,13 +79,13 @@
                     <h2>Get In Touch</h2>
                     <div class="contact">
                         <div class="contact-right">
-                            <form action="">
-                                <textarea name="" id="" cols="30" rows="10" placeholder="Enter Message" required></textarea>
+                            <form action="#" method="post">
+                                <textarea name="message" cols="30" rows="10" placeholder="Enter Message" required></textarea>
                                 <div class="mail">
-                                    <input type="text" name="" id="" placeholder="Enter your name" required>
-                                    <input type="email" name="" id="" placeholder="Email" required>
+                                    <input type="text" name="name" placeholder="Enter your name" required>
+                                    <input type="email" name="email" placeholder="Email" required>
                                 </div>
-                                <input type="text" name="subject" id="" placeholder="Enter Subject" required>
+                                <input type="text" name="subject" placeholder="Enter Subject" required>
                                 <button type="submit">SEND</button>
                             </form>
                         </div>
